# strangelooplab

./: .ghci  .gitignore  LICENSE  README.md  cabal.project  gitignore
experiments/: Examples.hs  HypersetSentences.hs  IncSchemeGraph.hs
models/: HFS.hs  graph.dot  labeledGraph.hs  russellParadox.hs
models/Hyperset/: DOTExport.hs  Decorator.hs  DenoteSystem.hs  DotExport.hs  Examples.hs  GraphBuilder.hs  Main.hs  Operations.hs  Pretty.hs  SetToGraph.hs  Types.hs
models/Hyperset/output_hyperset/: Liar.dot  sistema_Yablo.dot
models/HypersetGraph/: DOTExport.hs  Decorator.hs  DenoteSystem.hs  Examples.hs  GraphBuilder.hs  Main.hs  Operations.hs  Pretty.hs  SetToGraph.hs  Types.hs
models/HypersetParadox/: SelfRefParadox.hs  Sentence.hs
models/Inc scheme/: Elements.hs  Example.hs  Main.hs  Viz.hs
models/Inc scheme abstract/: Elements.hs  Graph.hs  Main.hs  Paradox.hs  Viz.hs
models/Inc scheme abstract/output_inclosure/: example.dot
models/Inc scheme/output_inclosure/: example.dot
models/IncSchemeFuncional/: DenoteSystem.hs  Example.hs  Main.hs  Schemes.hs  SetsAndPredicates.hs  Types.hs  toDot.hs
models/hyperset/: gitignore  hyperset.cabal
models/hyperset/app/: Main.hs
models/hyperset/dist-docs/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  source-hashes
models/hyperset/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
models/hyperset/output_hyperset/: sistema.dot
models/hyperset/src/Hyperset/: Decorator.hs  DenoteSystem.hs  DotExport.hs  Examples.hs  GraphBuilder.hs  Operations.hs  Pretty.hs  SelfRefParadox.hs  Sentence.hs  SetToGraph.hs  Types.hs
models/hyperset/src/output_hyperset/: sistema_dual_liar.dot
models/hyperset_paradox_model/: hypersetparadox.cabal
models/hyperset_paradox_model/app/: HypersetSentences.hs
models/hyperset_paradox_model/src/HypersetParadox/: SelfRefParadox.hs
models/hypersets_model/: hyperset.cabal
models/hypersets_model/app/: Chapter3_Examples.hs
models/hypersets_model/src/Hyperset/: Decorator.hs  DenoteSystem.hs  Examples.hs
models/output/: example1.dot  example2.dot
models/output_hyperset/: example2.dot  sistema.dot  sistema1.dot
models_and_experiments/IncSchemeFuncional/: Example.hs  Schemes.hs
models_and_experiments/hyperset_predicates/: hypersetspredicates.cabal
models_and_experiments/hyperset_predicates/app/: Main.hs
models_and_experiments/hyperset_predicates/src/HypersetPredicates/: DenoteSystem.hs  DotToImage.hs  Examples.hs  Predicates.hs  Schemes.hs  SetToLabGraph.hs  ToDot.hs  Types.hs  VertexOperations.hs
models_and_experiments/hypersets_incscheme_model/: hypersetsincscheme.cabal
models_and_experiments/hypersets_incscheme_model/app/: Main.hs
models_and_experiments/hypersets_incscheme_model/src/HypersetIncScheme/: DenoteSystem.hs  DotToImage.hs  Equation.hs  Examples.hs  Predicate.hs  Schemes.hs  SetToGraph.hs  ToDot.hs  Types.hs  Vertex.hs
models_and_experiments/hypersets_model/: hyperset.cabal  hypersets.cabal
models_and_experiments/hypersets_model/app/: Chapter3_Examples.hs
models_and_experiments/hypersets_model/src/Hyperset/: Decorator.hs  (+12 more)
models_and_experiments/hypersets_paradox_model/: hypersetsparadox.cabal
models_and_experiments/hypersets_paradox_model/app/: HypersetSentences.hs
models_and_experiments/hypersets_paradox_model/src/HypersetParadox/: BuildFunctionApplication.hs  BuildReferenceChain.hs  BuildSelfRefSentence.hs  BuildSentence.hs  Examples.hs
models_and_experiments/hypersets_predicate/: hypersetspredicate.cabal
models_and_experiments/hypersets_predicate/app/: Main.hs
models_and_experiments/hypersets_predicate/src/HypersetPredicate/: DenoteSystem.hs  DotToImage.hs  Equation.hs  Examples.hs  Predicate.hs  Schemes.hs  SetToGraph.hs  ToDot.hs  Types.hs  Vertex.hs
models_and_experiments/simu_paradox/: RussellParadoxGADTs.hs  RussellParadoxHFS.hs  RussellParadoxOmega.hs
output_hyperset/: sistema_M3.dot
(+4 files in other folders)
