cabal-version:       2.4
name:                hyperset
version:             0.1.0.0
build-type:          Simple

-- Metadata opcional
synopsis:            Representación de paradojas como hiperconjuntos
description:         Proyecto para experimentar con sistemas autorreferenciales y HFS
license:             MIT
author:              Rocío Perez Sbarato
maintainer:          rocio.perez.sbarato@mi.unc.edu.ar
category:            Logic, Math

library
  exposed-modules:     
      Hyperset.Decorator
    , Hyperset.DenoteSystem
    , Hyperset.DotExport
    , Hyperset.Examples
    , Hyperset.GraphBuilder
    , Hyperset.SetToGraph
    , Hyperset.Types
    , Hyperset.Pretty
    , Hyperset.Operations
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5
                        , array
                        , containers
                        , directory

executable hyperset
  main-is:             Chapter3_Examples.hs
  hs-source-dirs:      app
  build-depends:       base >=4.14 && <5
                      , hyperset
                      , array
                      , containers
                      , directory
  default-language:    Haskell2010
