cabal-version: 2.4
name: hypersetsincscheme
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      HypersetIncScheme.Schemes
    , HypersetIncScheme.Types
    , HypersetIncScheme.SetToGraph
    , HypersetIncScheme.DenoteSystem
    , HypersetIncScheme.ToDot
    , HypersetIncScheme.DotToImage
    , HypersetIncScheme.Examples
    , HypersetIncScheme.Vertex
    , HypersetIncScheme.Predicate
    , HypersetIncScheme.Equation
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , containers
    , array
    , directory
    , process

executable hypersets-incscheme
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , hypersetsparadox
    , hypersetsincscheme
    , containers
    , array
    , directory