cabal-version: 2.4
name: hypersetsparadox
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      HypersetParadox.BuildSentence
    , HypersetParadox.BuildSelfRefSentence
    , HypersetParadox.BuildReferenceChain
    , HypersetParadox.Examples
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , containers
    , array
    , directory

executable hypersets-paradox
  main-is: HypersetSentences.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , hypersetsparadox
    , containers
    , array
    , directory
