cabal-version: 2.4
name: hypersetspredicate
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      HypersetPredicate.Schemes
    , HypersetPredicate.Types
    , HypersetPredicate.SetToGraph
    , HypersetPredicate.DenoteSystem
    , HypersetPredicate.ToDot
    , HypersetPredicate.DotToImage
    , HypersetPredicate.Examples
    , HypersetPredicate.Vertex
    , HypersetPredicate.Predicate
    , HypersetPredicate.Equation
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , containers
    , array
    , directory
    , process

executable hypersets-predicate
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , hypersets
    , hypersetsparadox
    , hypersetspredicate  
    , containers
    , array
    , directory